--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,1 +1,41 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+.search-form {
+    max-width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 0 30px 0;
+    background-color: goldenrod;
+    position: relative;
+}
+
+.search-form__input {
+   border-style: none;
+   margin-right: 30px;
+   border-radius: 20px;
+   width: 40vw;
+    height: 7VH;
+    @media screen and (min-width: 768px) {
+        width: 35vw;
+    }
+    @media screen and (min-width: 1200px) {
+        width: 30vw;
+    }
+    @media screen and (min-height: 650px) {
+        height: 5vh;
+    }
+    outline: none;
+    padding: 0px 0 0 15px;
+    
+}
+
+.search-form__button {
+    border-style: none;
+    height: 7VH;
+    @media screen and (min-height: 650px) {
+        height: 5vh;
+    }
+    width: 10VH;
+    background-color: chocolate;
+    border-radius: 20px;
+}
